<resources>
    <string name="app_name">Login Register</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_registration">Register </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
</resources>
